# ardennes

./: .gitignore  README.md  __evaluate__.py  __main__.py  __old__.py  __test__.py  config.json  data_normalization.py  evaluate.py  graphical_model.py  industrial.py  input.json  installation.sh  j48.py  main.py  params.json  reporter.py  requirements.sh  requirements.txt  results.csv  test_ardennes.py  train.py  treelib.py  utils.py
__extensions__/: .gitignore  README.md  _test_module_.py  c_individual.c  hello.c  individual.c  setup.py
datasets/: autos.arff  balloon.csv  bank-full_no_missing.csv  credit-a.arff  credit-a_full.csv  glass.csv  iris.csv  mushrooms.csv  play_tennis.arff  play_tennis.csv  play_tennis.csv~  segment.arff  segment.csv
device/: .gitignore  CMakeLists.txt  __init__.py  __test_entropy__.py  __test_implementation__.py  cpu_code.cpp  cpu_utils.h  setup.py
devices/: .gitignore  CMakeLists.txt  __init__.py  __test_implementation__.py  cpu_code.cpp  gpu_code.py  setup.py
evaluate/: __init__.py
evolution/: __init__.py  graphical_models.py  heap.py  individual.py  preprocessing.py  trees.py
individual/: __init__.py  __tree__.py
information/: .gitignore  __init__.py  cuda.py  kernel.cu
java/: SimpleCart.java
main/: __init__.py  genotype.py  individual.py
metadata/: fold=00 run=00 10:05 05-10-2016.csv
opencl/: __init__.py
parallel/: __init__.py  base.py  cuda.py  handlers.py  kernel.cl  kernel.cu  opencl.py  sequential.py
parametrizations/: parametrization_hayes-roth-full.csv
pgmpy_test/: __init__.py
preprocessing/: __init__.py  (+1 more)
(+269 files in other folders)
